--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dependencies = [
     "pyet>=1.3.0",
     "netCDF4>=1.6.0",
     "distributed>=2023.1.0",
-    "dateutil>=3.9.0",
+    "python-dateutil>=2.8.0",
     "cdo>=1.5.0",
 ]
 
@@ -58,6 +58,9 @@ docs = [
 Homepage = "https://github.com/kasra-keshavarz/fuseflow"
 Repository = "https://github.com/kasra-keshavarz/fuseflow"
 Issues = "https://github.com/kasra-keshavarz/fuseflow/issues"
+
+[project.scripts]
+fuseflow = "fuseflow.cli.main:cli"
 
 [tool.setuptools.packages.find]
 where = ["src"]
